# copa-gambi

./: .env.example  .gitignore  Readme.md  pyproject.toml
.claude/: launch.json
docs/: architecture.md  roadmap.md
skills/sentiment-skill/: SKILL.md
skills/sentiment-skill/scripts/: fetch_sentiment.py
skills/stats-skill/: SKILL.md
skills/stats-skill/scripts/: fetch_stats.py
skills/tactical-skill/: SKILL.md
skills/tactical-skill/references/: formations.md
src/copa_gambi/: __main__.py  instructions.py
src/copa_gambi/agents/: capabilities.py  factory.py  instructions.py  skills.py  team.py
src/copa_gambi/agents/tools/: registry.py  stats.py
src/copa_gambi/cli/: main.py
src/copa_gambi/core/: config.py  hub.py  instructions.py  schemas.py
src/copa_gambi/tools/: registry.py  sentiment.py  stats.py
src/copa_gambi/ui/: app.py  components.py  debate.py  report.py
